# eole

./: .gitignore  404.html  ATTENTION_ENTROPY_FEATURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  TORCHCOMPILE_README.md  index.html  lunr-index-1718741984443.json  lunr-index-1719842356527.json  lunr-index-1719842666013.json  lunr-index-1719909847530.json  lunr-index-1719910144103.json  lunr-index-1720427859933.json  lunr-index-1720800123922.json  lunr-index-1721678183750.json  lunr-index-1724782074233.json  lunr-index-1725028389525.json  lunr-index-1726473227743.json  lunr-index-1726749582864.json  lunr-index-1726749912483.json  lunr-index-1726750311300.json  lunr-index-1726751992494.json  lunr-index-1727982118372.json  lunr-index-1727982426313.json  lunr-index-1734545163820.json  lunr-index-1741618298077.json  lunr-index-1743696548166.json  lunr-index-1743700074994.json  lunr-index-1743700150374.json  lunr-index-1743700588934.json  lunr-index-1743701378356.json  lunr-index-1743702124302.json  lunr-index-1758263253723.json  lunr-index-1764602187641.json  lunr-index-1766743644370.json  lunr-index-1768073688460.json  lunr-index-1772388063558.json  lunr-index-1773584563262.json  (+41 more)
apps/: chatbot.py  eole-translator.py
benchmarks/: lowerprecision_instability.py  rmsnorm_benchmarks.py  rope_benchmarks.py
csrc/: activation_kernels.cu  bindings.cpp  eole_scalar_type.hpp  kernel.h  marlin_dense.cu  marlin_dense_template.h  marlin_moe_wna16.cu  marlin_repack.cu  marlin_template.h  rms_norm.cu  rotary_embedding.cu
docker/: Dockerfile  Dockerfile-base  build.sh  (+1 more)
(+1040 files in other folders)
