[build-system]
requires = ["setuptools<69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# If your package follows the src/ layout, uncomment the next line:
# packages = { find = { where = ["src"] } }

[tool.flake8]
max-line-length = 120
ignore = ["E203", "E731", "W503"]
# exclude = ["tests/*", "migrations/*"]

[tool.black]
line-length = 120


